--- a/src/container/index/index.hbs
+++ b/src/container/index/index.hbs
@@ -69,6 +69,31 @@
       </form>
     </div>
   </section>
+
+  <section>
+    <div class="form">
+      <h1 class="form__title">Інформація про товар</h1>
+      <form method="POST" action="/product-create">
+        <div class="form__content">
+          <div class="form__name_price">
+            <div class="form__field form__name">
+              <label for="name" class="from__label">Назва товару</label>
+              <input type="name" name="name" class="form__input">
+            </div>
+            <div class="form__field form__price">
+              <label for="price" class="from__label">Ціна</label>
+              <input type="price" name="price" class="form__input">
+            </div>
+          </div>
+          <div class="form__field">
+            <label for="description" class="from__label">Короткий опис товару</label>
+            <input type="description" name="description" class="form__input form__description">
+          </div>
+          <button class="form__button_color">Створити товар</button>
+        </div>
+      </form>
+    </div>
+  </section>
 </main>
 
 
