--- a/src/container/index/style.scss
+++ b/src/container/index/style.scss
@@ -33,6 +33,29 @@
         padding: s.space(2);
         border-radius: 20px;
     }
+    &__name_price {
+        display: flex;
+        grid-template-columns: 1fr 1fr;
+    }
+    &__name {
+        display: flex;
+        width: 50%;
+        margin-right: 20px;
+    }
+    &__price {
+        display: flex;
+        width: 50%;
+    }
+    &__description {
+        display: flex;
+        height: 100px;
+    }
+    &__button_color {
+        background-color: blue;
+        border: 1px solid s.color('light');
+        padding: s.space(2);
+        border-radius: 4px;
+    }
 }
 
 
