--- a/src/container/index/style.scss
+++ b/src/container/index/style.scss
@@ -50,11 +50,48 @@
         display: flex;
         height: 100px;
     }
+    &__button_edit {
+        display: flex;
+    }
     &__button_color {
         background-color: blue;
         border: 1px solid s.color('light');
         padding: s.space(2);
         border-radius: 4px;
+    }
+    &__name_price_id {
+        display: flex;
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+    &__name_edit {
+        display: flex;
+        width: 33%;
+        margin-right: 20px;
+    }
+    &__price_edit {
+        display: flex;
+        width: 33%;
+        margin-right: 20px;
+    }
+    &__id_edit {
+        display: flex;
+        width: 33%;
+        margin-right: 20px;
+    }
+    &__button_color_red {
+        width: 50%;
+        background-color: red;
+        border: 1px solid s.color('light');
+        padding: s.space(2);
+        border-radius: 4px;
+    }
+    &__button_color_blue {
+        width: 50%;
+        background-color: blue;
+        border: 1px solid s.color('light');
+        padding: s.space(2);
+        border-radius: 4px;
+        margin-right: 20px;
     }
 }
 
