--- a/src/container/product-list.hbs
+++ b/src/container/product-list.hbs
@@ -4,161 +4,26 @@
 }}
 
 <main>
-  {{!-- <section>
-    <div class="form">
-      <h1 class="form__title">Створити користувача</h1>
-      <form method="POST" action="/user-create">
-        <div class="form__content">
-          <div class="form__field">
-            <label for="email" class="from__label">Email адреса:</label>
-            <input type="email" name="email" class="form__input">
-          </div>
-          <div class="form__field">
-            <label for="login" class="from__label">Нікнейм:</label>
-            <input type="login" name="login" class="form__input">
-          </div>
-          <div class="form__field">
-            <label for="password" class="from__label">Пароль:</label>
-            <input type="password" name="password" class="form__input">
-          </div>
-          <button class="form__button">Створити</button>
-        </div>
-      </form>
-    </div>
-  </section>
-
-  <section>
-    <div class="form">
-      <h1 class="form__title">Список користувачів</h1>
-      <div class="user-list">
-        {{#with data.users}}
-        {{#if isEmpty}}
-        <mark>Пустий</mark>
-        {{else}}
-        <ul>
-          {{#each list}}
-          <li>{{email}} | {{login}} | {{id}} <a href="/user-delete?id={{id}}">(видалити)</a></li>
-          {{/each}}
-        </ul>
-        {{/if}}
-        {{/with}}
-      </div>
-    </div>
-  </section>
-
-
-  <section>
-    <div class="form">
-      <h1 class="form__title">Оновити пошту користувача</h1>
-      <form method="POST" action="/user-update">
-        <div class="form__content">
-          <div class="form__field">
-            <label for="id" class="from__label">ID:</label>
-            <input type="id" name="id" class="form__input">
-          </div>
-          <div class="form__field">
-            <label for="email" class="from__label">Нова email адреса:</label>
-            <input type="email" name="email" class="form__input">
-          </div>
-          <div class="form__field">
-            <label for="password" class="from__label">Пароль:</label>
-            <input type="password" name="password" class="form__input">
-          </div>
-          <button class="form__button">Відправити</button>
-        </div>
-      </form>
-    </div>
-  </section> --}}
-
-  <section>
-    <div class="form">
-      <h1 class="form__title">Інформація про товар</h1>
-      <form method="POST" action="/product-create">
-        <div class="form__content">
-          <div class="form__name_price">
-            <div class="form__field form__name">
-              <label for="name" class="from__label">Назва товару</label>
-              <input type="name" name="name" class="form__input">
-            </div>
-            <div class="form__field form__price">
-              <label for="price" class="from__label">Ціна</label>
-              <input type="price" name="price" class="form__input">
-            </div>
-          </div>
-          <div class="form__field">
-            <label for="description" class="from__label">Короткий опис товару</label>
-            <input type="description" name="description" class="form__input form__description">
-          </div>
-          <button class="form__button_color">Створити товар</button>
-        </div>
-      </form>
-    </div>
-  </section>
-
   <section>
     <div class="form">
       <h1 class="form__title">Список товарів</h1>
       <div class="products-list">
-        {{#with data.products}}
-        {{#if isEmpty}}
-        <mark>Пустий</mark>
-        {{else}}
-        <ul>
-          {{#each list}}
-          <li>{{name}} | {{price}} | {{id}} <a href="/product-edit?id={{id}}">(видалити)</a></li>
-          {{/each}}
-        </ul>
-        {{/if}}
-        {{/with}}
-        aaaaaaa
-      </div>
-    </div>
-  </section>
-
-
-  <section>
-    <div class="form">
-      <h1 class="form__title">Список товарів</h1>
-      <div class="card_product">
-        {{#with data.products}}
-        {{#each list}}
-        {{name}} | {{price}} | {{description}}
-        {{/each}}
-        {{/with}}
-      </div>
-    </div>
-  </section>
-
-
-  <section>
-    <div class="form">
-      <h1 class="form__title">Інформація про товар</h1>
-      <form method="POST" action="/product-edit">
-        <div class="form__content">
-          <div class="form__name_price_id">
-            <div class="form__field form__name_edit">
-              <label for="name" class="from__label">Назва товару</label>
-              <input type="name" name="name" class="form__input">
-            </div>
-            <div class="form__field form__price_edit">
-              <label for="price" class="from__label">Ціна</label>
-              <input type="price" name="price" class="form__input">
-            </div>
-            <div class="form__field form__id_edit">
-              <label for="id" class="from__label">ID</label>
-              <input type="id" name="id" class="form__input">
-            </div>
-          </div>
-          <div class="form__field">
-            <label for="description" class="from__label">Короткий опис товару</label>
-            <input type="description" name="description" class="form__input form__description">
-          </div>
-          <div class="form__button_edit">
-            <button class="form__button_color_blue">Зберегти оновлення</button>
-            <button class="form__button_color_red">Видалити товар</button>
+        <div class="product-card">
+          <div class="card">
+            {{#with data.products}}
+            {{#if isEmpty}}
+            <mark>Пустий</mark>
+            {{else}}
+            <ul>
+              {{#each list}}
+              <li>{{name}} {{description}} {{price}} {{id}} <a href="/product-edit?id={{id}}">Редагувати</a></li>
+              {{/each}}
+            </ul>
+            {{/if}}
+            {{/with}}
           </div>
         </div>
-      </form>
+      </div>
     </div>
   </section>
 </main>
