--- a/src/container/index/style.scss
+++ b/src/container/index/style.scss
@@ -109,3 +109,12 @@ main {
         padding-bottom: 5px;
     }
 }
+.product-card {
+    display: flex;
+}
+.card {
+    display: flex;
+    width: 200px;
+    height: 200px;
+    border: 1px solid white;
+}
