--- a/src/component/product-card.hbs
+++ b/src/component/product-card.hbs
@@ -1,15 +1,9 @@
-<section class="product-card">
+<div class="product-card">
     <div class="card">
-        {{#with data.products}}
-        {{#if isEmpty}}
-        <mark>Пустий</mark>
-        {{else}}
         <ul>
             {{#each list}}
-            <li>{{name}} | {{price}} | {{id}} <a href="/product-edit?id={{id}}">(видалити)</a></li>
+            <li>{{name}} {{description}} {{price}} {{id}} <a href="/product-edit?id={{id}}">Редагувати</a></li>
             {{/each}}
         </ul>
-        {{/if}}
-        {{/with}}
     </div>
-</section>
+</div>
