--- a/src/container/product-list.hbs
+++ b/src/container/product-list.hbs
@@ -8,21 +8,25 @@
     <div class="form">
       <h1 class="form__title">Список товарів</h1>
       <div class="products-list">
+        {{#with data.products}}
+        {{#if isEmpty}}
+        <mark>Пустий</mark>
+        {{else}}
+
+        {{!-- {{> product-card }} --}}
+
+
         <div class="product-card">
           <div class="card">
-            {{#with data.products}}
-            {{#if isEmpty}}
-            <mark>Пустий</mark>
-            {{else}}
             <ul>
               {{#each list}}
               <li>{{name}} {{description}} {{price}} {{id}} <a href="/product-edit?id={{id}}">Редагувати</a></li>
               {{/each}}
             </ul>
-            {{/if}}
-            {{/with}}
           </div>
         </div>
+        {{/if}}
+        {{/with}}
       </div>
     </div>
   </section>
