--- a/src/container/product-create/index.hbs
+++ b/src/container/product-create/index.hbs
@@ -6,6 +6,7 @@
 <main>
 
   <section>
+    {{#with data}}
     <div class="form">
       <h1 class="form__title">Інформація про товар</h1>
       <form method="POST" action="/product-create">
@@ -28,6 +29,7 @@
         </div>
       </form>
     </div>
+    {{/with}}
   </section>
 </main>
 
