--- a/src/component/product-card/index.hbs
+++ b/src/component/product-card/index.hbs
@@ -9,7 +9,8 @@
     <div class="product__id">ID: {{id}}</div>
     <div class="product__row">
         <div class="product__price">{{price}}$</div>
-        <button class="product__edit"><a href="/product-edit?id={{id}}">Редагувати</a></button>
+        <button class="product__edit"><a href="/product-edit?id={{id}}"
+                class="product__edit_button">Редагувати</a></button>
     </div>
 </div>
 {{/each}}
