--- a/src/container/product-alert/index.hbs
+++ b/src/container/product-alert/index.hbs
@@ -3,9 +3,9 @@
 в якому міститься код, котрий буде віддаватися по шляху (PATH) - "/"
 }}
 
-<div>
+<div class="form__product_alert">
   <h1>{{info}}</h1>
-  <a href='/product-list'>Повернутися назад</a>
+  <a href='/product-list' class="form__product_alert_blue">Повернутися назад</a>
 </div>
 
 {{!
