--- a/src/container/product-list/index.hbs
+++ b/src/container/product-list/index.hbs
@@ -6,7 +6,7 @@
 <main>
   <section>
     <div class="form">
-      <h1 class="form__title">Список товарів</h1>
+      <h1 class="form__title_product_list">Список товарів</h1>
       <div class="products-list">
 
         <div class="product">
