--- a/src/container/product-alert/style.scss
+++ b/src/container/product-alert/style.scss
@@ -94,12 +94,23 @@
         width: 33%;
         margin-right: 20px;
     }
-    
-    &__title_product_list {
-        font-size: 20px;
-        font-weight: bold;
-        padding-bottom: s.space(1);
-        padding-left: 20px;
+    &__product_alert {
+        display: flex;
+        text-justify: center;
+        border: 1px solid s.color('light');
+        margin-top: 20px;
+        margin-left: 20px;
+        margin-right: 20px;
+        padding: 20px;
+        border-radius: 4px;
+    }
+    &__product_alert_blue {
+        background-color: blue;
+        border: 1px solid s.color('light');
+        text-decoration: none;
+        padding: s.space(2);
+        border-radius: 4px;
+        margin-left: 910px;
     }
     
 }
@@ -120,46 +131,32 @@ main {
 }
 .products-list {
     display: flex;
-    width: 1060px;
 }
 .product {
     display: flex;
-
-    &__card {
-        display: flex;
-        flex-direction: column;
-        width: 260px;
-        height: 200px;
-        border: 1px solid white;
-        margin: 20px;
-        padding-left: 20px;
-        padding-top: 20px;
-    }
-
-    &__name {
-        padding-bottom: 20px;
-    }
-    &__description {
-        padding-bottom: 20px;
-    }
-    &__row {
-        display: flex;
-    }
-    &__id {
-        padding-top: 10px;
-        padding-bottom: 20px;
-    }
-    &__price {
-        padding-top: 20px;
-        padding-right: 20px;
-        padding-bottom: 20px;
-    }
-    &__edit {
-        padding-left: 60px;
-    }
-    &__edit_button {
-        text-decoration: none;
-    }
+}
+.product__card {
+    display: flex;
+    flex-direction: column;
+    width: 200px;
+    height: 200px;
+    border: 1px solid white;
+    margin: 20px;
 }
 
-
+.product__name {
+    display: flex;
+    width: 50%;
+    margin-right: 20px;
+}
+.product__price {
+    display: flex;
+    width: 50%;
+}
+.product__description {
+    display: flex;
+    height: 100px;
+}
+.product__edit {
+    display: flex;
+}
