--- a/src/container/product-list/style.scss
+++ b/src/container/product-list/style.scss
@@ -119,21 +119,23 @@ main {
     }
 }
 .products-list {
-    display: grid;
-    max-width: 100%;
+    display: flex;
 }
 .product {
-    display: flex;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: auto;
 
     &__card {
         display: flex;
         flex-direction: column;
-        width: 260px;
-        height: 200px;
+        min-width: 260px;
+        min-height: 200px;
         border: 1px solid white;
         margin: 20px;
         padding-left: 20px;
         padding-top: 20px;
+        border-radius: 4px;
     }
 
     &__name {
@@ -158,6 +160,8 @@ main {
     }
     &__edit {
         padding-left: 60px;
+        padding-bottom: 20px;
+        padding-top: 12px;
     }
     &__edit_button {
         text-decoration: none;
