--- a/src/container/product-list/style.scss
+++ b/src/container/product-list/style.scss
@@ -121,6 +121,9 @@ main {
 .products-list {
     display: flex;
 }
+.list_mark {
+    padding-left: 20px;
+}
 .product {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -131,32 +134,37 @@ main {
         flex-direction: column;
         min-width: 260px;
         min-height: 200px;
-        border: 1px solid white;
+        border: 1px solid #202220;
         margin: 20px;
         padding-left: 20px;
         padding-top: 20px;
         border-radius: 4px;
+        box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.3);
     }
 
     &__name {
         padding-bottom: 20px;
+        font-weight: 700;
+        font-size: 18px;
     }
     &__description {
         padding-bottom: 20px;
+        font-size: 12px;
     }
     &__row {
         display: flex;
     }
     &__id {
         color: #c5ccc6;
-        opacity: 0.75;
-        padding-top: 10px;
-        padding-bottom: 20px;
+        opacity: 0.55;
+        padding-top: 30px;
     }
     &__price {
         padding-top: 20px;
         padding-right: 20px;
         padding-bottom: 20px;
+        font-weight: 700;
+        font-size: 18px;
     }
     &__edit {
         padding-left: 60px;
