--- a/src/container/product-edit/index.hbs
+++ b/src/container/product-edit/index.hbs
@@ -1,7 +1,5 @@
-{{!
-Це код container файлу для index сторінки,
-в якому міститься код, котрий буде віддаватися по шляху (PATH) - "/"
-}}
+{{!-- Це код container файлу для index сторінки,
+в якому міститься код, котрий буде віддаватися по шляху (PATH) - "/" --}}
 
 <main>
   <section>
@@ -14,11 +12,8 @@
         {{/each}}
         {{/with}}
       </div>
-
-
-
-
       <h1 class="form__title">Редагування товару</h1>
+      {{#with data}}
       <form method="POST" action="/product-edit">
         <div class="form__content">
           <div class="form__name_price_id">
@@ -40,13 +35,12 @@
             <input type="description" name="description" class="form__input form__description">
           </div>
           <div class="form__button_edit">
-            {{#with data}}
             <button class="form__button_color_blue">Зберегти оновлення</button>
             <a href="/product-delete?id={{id}}" class="form__button_color_red">Видалити товар</a>
-            {{/with}}
           </div>
         </div>
       </form>
+      {{/with}}
     </div>
   </section>
 </main>
