--- a/src/container/purchase-alert/index.hbs
+++ b/src/container/purchase-alert/index.hbs
@@ -3,9 +3,12 @@
 в якому міститься код, котрий буде віддаватися по шляху (PATH) - "/"
 }}
 
-<div class="form__product_alert">
-    <h1>{{info}}</h1>
-    <a href='/product-list' class="form__product_alert_blue">Повернутися назад</a>
+<div class="card">
+    <div class="card__header">
+        <h2 class="card__title">{{data.message}}</h2>
+        <h3 class="card__subtitle">{{data.info}}</h3>
+    </div>
+    <a href="{{data.link}}" class="card__button card__button--blue">Повернутись назад</a>
 </div>
 
 {{!
