--- a/src/container/purchase-alert/style.scss
+++ b/src/container/purchase-alert/style.scss
@@ -1,118 +1,32 @@
 @use '../../lib/service.scss' as s;
 
-.form {
+.card {
     display: flex;
     flex-direction: column;
+    max-width: 100%;
+    max-height: 100%;
+    border: 1px solid s.color('light');
+    text-justify: center;
+    border-radius: 4px;
     padding: s.space(4);
-    gap: s.space(8);
+    margin: 20px;
 
-    &__title {
-        font-size: 20px;
-        font-weight: bold;
-        padding-bottom: s.space(1);
-        border-bottom: 1px solid s.color('light');
-    }
-    &__content {
-        display: grid;
-        gap: s.space(6);
-    }
-    &__field {
+    &__header {
         display: flex;
         flex-direction: column;
-        gap: s.space(2);
-    }
-    &__label {
-        font-size: 14px;
-    }
-    &__input {
-        border: 1px solid s.color('light');
-        padding: s.space(2);
     }
     &__button {
-        border: 1px solid s.color('light');
-        padding: s.space(2);
-        border-radius: 20px;
-    }
-    &__name_price {
-        display: flex;
-        grid-template-columns: 1fr 1fr;
-    }
-    &__name {
-        display: flex;
-        width: 50%;
-        margin-right: 20px;
-    }
-    &__price {
-        display: flex;
-        width: 50%;
-    }
-    &__description {
-        display: flex;
-        height: 100px;
-    }
-    
-    &__button_color {
-        background-color: blue;
-        border: 1px solid s.color('light');
-        padding: s.space(2);
-        border-radius: 4px;
-    }
-    &__button_edit {
-        display: flex;
-    }
-    &__button_color_red {
-        width: 50%;
-        background-color: red;
-        border: 1px solid s.color('light');
-        padding: s.space(2);
-        border-radius: 4px;
-    }
-    &__button_color_blue {
-        width: 50%;
-        background-color: blue;
-        border: 1px solid s.color('light');
-        padding: s.space(2);
-        border-radius: 4px;
-        margin-right: 20px;
-    }
-    &__name_price_id {
-        display: flex;
-        grid-template-columns: 1fr 1fr 1fr;
-    }
-    &__name_edit {
-        display: flex;
-        width: 33%;
-        margin-right: 20px;
-    }
-    &__price_edit {
-        display: flex;
-        width: 33%;
-        margin-right: 20px;
-    }
-    &__id_edit {
-        display: flex;
-        width: 33%;
-        margin-right: 20px;
-    }
-    &__product_alert {
-        display: flex;
         max-width: 100%;
-        text-justify: center;
-        border: 1px solid s.color('light');
-        margin-top: 20px;
-        margin-left: 20px;
-        margin-right: 20px;
-        padding: 20px;
-        border-radius: 4px;
-    }
-    &__product_alert_blue {
+        text-align: center;
+        color: white;
         background-color: blue;
         border: 1px solid s.color('light');
         text-decoration: none;
         padding: s.space(2);
         border-radius: 4px;
-        margin-left: 910px;
+        margin-left: 960px;
     }
+    
     
 }
 
