--- a/src/container/purchase-index/style.scss
+++ b/src/container/purchase-index/style.scss
@@ -2,6 +2,8 @@
 
 @use '../../component/heading/style.scss' as heading;
 @use '../../component/purchase-product/style.scss' as purchase-product;
+@use '../../component/field/style.scss' as field;
+@use '../../component/divider/style.scss' as divider;
 
 .main {
     display: flex;
