--- a/src/container/purchase-product/index.hbs
+++ b/src/container/purchase-product/index.hbs
@@ -1,7 +1,34 @@
 <main class="main">
+    {{> heading title="Інформація про товар"}}
+
+    {{#with data.product}}
+    <form method="POST" action="/purchase-create?id={{id}}">
+        <div class="product-info">
+
+            <img src="{{img}}" alt="{{title}}" class="product-info__image">
+            <h2 class="product-info__title">{{title}}</h2>
+            <p class="product-info__subtitle">{{description}}</p>
+
+            {{> divider}}
+
+            {{#each category}}
+            <span class="product-info__category product-info__category--{{id}}">{{text}}</span>
+            {{/each}}
+
+            {{> divider}}
+
+            {{> field label="Кількість" type="number" name="amount" value="1"}}
+
+            <button href="/purchase-product?id={{id}}" class="product-info__button">Купити зараз: 27000 грн</button>
+
+        </div>
+    </form>
+    {{/with}}
+
     {{> heading title="Інші Товари" info="Комп'ютери та ноутбуки"}}
+
     <div class="product-list">
-        {{#each data.List}}
+        {{#each data.list}}
         {{> purchase-product data=this}}
         {{/each}}
     </div>
