--- a/src/container/purchase-product/style.scss
+++ b/src/container/purchase-product/style.scss
@@ -62,9 +62,9 @@
 }
 
 .product-info__button {
-    background-color: s.color(main);
+    background-color: blue;
     color: white;
-    border: none;
+    border: 1px solid grey;
     border-radius: 5px;
     padding: 10px 20px;
     font-size: 16px;
