--- a/src/container/purchase-product/index.hbs
+++ b/src/container/purchase-product/index.hbs
@@ -19,7 +19,7 @@
 
             {{> field label="Кількість" type="number" name="amount" value="1"}}
 
-            <button href="/purchase-product?id={{id}}" class="product-info__button">Купити зараз: 27000 грн</button>
+            <button class="product-info__button">Купити зараз: {{price}} грн</button>
 
         </div>
     </form>
