--- a/src/container/purchase-create/index.hbs
+++ b/src/container/purchase-create/index.hbs
@@ -1,7 +1,7 @@
 <main class="main">
     {{#with data}}
     <form method="POST" action="/purchase-submit?id={{id}}" class="form-card">
-        {{>heading title="Ваше замовлення"}}
+        {{> heading title="Ваше замовлення"}}
 
         <ul class="cart">
             {{#each cart}}
@@ -22,6 +22,11 @@
         {{>field label="Списати бонуси" name="bonus"}}
         {{>field label="Промо-код" name="promocode"}}
         {{>divider}}
+
+        {{>field value=totalPrice name="totalPrice" disabled=true}}
+        {{>field value=productPrice name="productPrice" disabled=true}}
+        {{>field value=deliveryPrice name="deliveryPrice" disabled=true}}
+
         <strong class="form-card__total">
             Всього: {{totalPrice}} грн
         </strong>
