--- a/src/container/purchase-create/index.hbs
+++ b/src/container/purchase-create/index.hbs
@@ -26,6 +26,7 @@
         {{>field value=totalPrice name="totalPrice" disabled=true}}
         {{>field value=productPrice name="productPrice" disabled=true}}
         {{>field value=deliveryPrice name="deliveryPrice" disabled=true}}
+        {{>field value=amount name="amount" disabled=true}}
 
         <strong class="form-card__total">
             Всього: {{totalPrice}} грн
