--- a/src/container/purchase-create/index.hbs
+++ b/src/container/purchase-create/index.hbs
@@ -29,7 +29,7 @@
         {{>field value=amount name="amount" disabled=true}}
 
         <strong class="form-card__total">
-            Всього: {{totalPrice}} грн
+            Всього: {{totalPrice}} грн ({{bonus}} грн бонусів)
         </strong>
         {{>button text="Оформити замовлення"}}
     </form>
